[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/VirtualLight/debug/DebugLabel.gd" type="Script" id=1]
[ext_resource path="res://addons/VirtualLight/debug/DebugLabelText.tscn" type="PackedScene" id=4]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 1.4, 0.2 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_cull_mode = 2
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_color = Color( 0.462745, 0.462745, 0.462745, 1 )
uv1_scale = Vector3( 2, 1, 1 )

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
next_pass = SubResource( 3 )
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
flags_albedo_tex_force_srgb = true
params_cull_mode = 2
params_billboard_mode = 2
params_billboard_keep_scale = true
albedo_texture = SubResource( 2 )

[sub_resource type="SphereShape" id=5]
radius = 2.5

[node name="DebugLabel" type="Spatial"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )
text = "Debug Label"

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.059 )
layers = 9
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 350, 50 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="DebugLabelText" parent="Viewport" instance=ExtResource( 4 )]
text = "Debug Label"

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
